2005-03-31  Per Abrahamsen  <abraham@dina.kvl.dk>

	* select.C (Spec::description, Spec::refer): New member function.
	(Spec::check_path): Ditto.
	(Spec::check_alist): Call it.
	(document): New member function.

	* program_document.C (submodel): Removed member variable.

2005-03-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* library.C, library.h (has_interesting_description): New member
	function. 
	* program_document.C (has_interesting_description): Removed.
	* log_select.C (has_interesting_description): Removed.

	* select.C (check_alist): Fix warning.
	(load_syntax): Fix typo in desctiption string.

	* select.C, select.h (log_name): Removed.
	(document): New member function.
	* log_select.C (document_entries): Call it.

2005-03-18  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_irrigate.C (ActionIrrigateSubsoilStart): Removed
	(ActionIrrigateStop): Ditto.

	* field.C, field.h (set_subsoil_irrigation): Removed.

	* column_std.C (irrigate_subsoil): Add solute to fertilizer log.

	* column.h, column_base.C, column_std.C (set_subsoil_irrigation):
	Removed. 

	* bioincorporation.C (N_added, C_added): Fixed dimension.

2005-03-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* units.C (standard_conversions): Added a couple of convertions
	for log variables.

	* phenology_std.C, phenology.h, phenology.C (mature): New member
	function. 
	* crop_std.C (tick): Use it.

2005-03-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* path.C (set_directory): Attempt to create directory if chdir
	fails. 

2005-03-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* horizon_std.C (HorizonStandardSyntax): Added warning for using
	fine and coarse sand.

2005-03-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* sample/dk-soil.dai: Moved here.
	* sample/Makefile (LIBS): Added.
	* lib/dk-soil.dai: From here.
	* lib/Makefile (REMOVE): Added.
	* sample/dk-soil.dai (Jyndevad, (Askov): New columns.
	
2005-02-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.70 released.
