@@ -31,7 +31,7 @@ using namespace std;
 
 struct SummaryBalance : public Summary
 {
-  static const symbol default_description;
+  static const char *const default_description;
   const symbol description;
   const string file;
   const symbol title;
@@ -76,8 +76,8 @@ struct SummaryBalance : public Summary
   void summarize (int hours, Treelog&) const;
 };
 
-const symbol SummaryBalance::default_description ("\
-A summary model providing a balance for a log parameterization.");
+const char *const SummaryBalance::default_description  = "\
+A summary model providing a balance for a log parameterization.";
 
 void
 SummaryBalance::clear ()
@@ -95,6 +95,7 @@ SummaryBalance::SummaryBalance (const AttributeList& al)
     description (al.identifier ("description")),
     file (al.name ("where", "")),
     title (al.check ("title") ? al.identifier ("title") : name),
+    period (al.check ("period") ? al.identifier ("period") : symbol ("")),
     precision (al.integer ("precision")),
     require_top (al.flag ("require_top")),
     input (al.identifier_sequence ("input")),
@@ -115,7 +116,7 @@ SummaryBalance::find_total (const vector<symbol>& names,
   for (size_t i = 0; i < fetch.size (); i++)
     if (in_list (i, names))
       max_digits = max (max_digits, 
-                        fetch[i]->value_size (total, period, hours));
+			fetch[i]->value_size (total, period, hours));
   return total;
 }
 
@@ -166,7 +167,7 @@ SummaryBalance::summarize (const int hours, Treelog& msg) const
   TmpStream tmp;
   tmp ().precision (precision);
   tmp ().flags (ios::right | ios::fixed);
-  if (description != default_description)
+  if (description.name () != default_description)
     tmp () << description << "\n\n";
 
   // Find width of tags.
@@ -202,6 +203,7 @@ SummaryBalance::summarize (const int hours, Treelog& msg) const
       shared_dim = dim;
       tmp () << "\n";
     }
+
   if (output.size () > 0)
     {
       const string dim = print_entries (tmp (), output, 
@@ -214,6 +216,7 @@ SummaryBalance::summarize (const int hours, Treelog& msg) const
         shared_dim = Syntax::Unknown ();
       tmp () << "\n";
     }
+
   if (content.size () > 0)
     {
       const string dim = print_entries (tmp (), content, 
@@ -226,6 +229,7 @@ SummaryBalance::summarize (const int hours, Treelog& msg) const
         shared_dim = Syntax::Unknown ();
       tmp () << "\n";
     }
+
   print_balance (tmp (), total_title, total, 
                  shared_dim, dim_size, max_size, width);
   tmp () << string (max_size + 3, ' ') << string (width, '=');
@@ -259,6 +263,9 @@ By default, the summary will be stored in daisy.log and the screen.");
       syntax.add ("title", Syntax::String, Syntax::OptionalConst,
 		  "Title of this summary.\n\
 By default, use the name of the parameterization.");
+      syntax.add ("period", Syntax::String, Syntax::OptionalConst, "\
+Set this to 'y', 'm', 'w', 'd' or 'h' to get fluxes per time period\n\
+instead of total amount.");
       syntax.add ("precision", Syntax::Integer, Syntax::Const,
 		  "Number of digits to print after decimal point.");
       alist.add ("precision", 2);
